# clean-architecture-fastapi

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: dependabot.yml
.github/workflows/: python_ci.yaml
src/: pyproject.toml  requirements.txt
src/adapters/: exceptions.py
src/adapters/repositories/auction_repository/: in_memory_repository.py  mongodb_repository.py
src/domain/enitites/: bid.py  item.py
src/domain/entities/: auction.py  item.py
src/domain/value_objects/: price.py
src/drivers/rest/: app.py  dependencies.py  exception_handlers.py  main.py
src/drivers/rest/routers/: auction.py  schema.py
src/ports/repositories/: auction_repository.py
src/tests/: conftest.py  utils.py
src/tests/integration/drivers/: auction_submit_bid_test.py  conftest.py
src/tests/integration/repositories/: mongodb_auction_repository_test.py
src/tests/unit/: submit_bid_use_case_test.py
src/use_cases/: exceptions.py  submit_bid_use_case.py
